* thread_pthread.c (native_cond_initialize): destroy condattr   after using it. Patch by Stanislav Sedov. Thank you.   [Bug #7041] [ruby-core:47619]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@37001 b2dd03c8-39d4-4d8f-98ff-823fe69b080e