thread_pthread.c
@@ -263,6 +263,7 @@ native_cond_initialize(rb_thread_cond_t *cond, int flags)
     }
 
     r = pthread_cond_init(&cond->cond, &attr);
+    pthread_condattr_destroy(&attr);
 # else
     r = pthread_cond_init(&cond->cond, NULL);
 # endif
